Fix spacing at the bottom of projects section

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,15 +1,20 @@
 #projects {
-  margin-bottom: 15vh;
+  margin-bottom: 5vh;
+  padding-bottom: 10vh;
+  background-color: var(--project-bg-color);
+  width: 100%;
+  align-items: center;
 }
 
 .projects-container {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  max-width: 700px;
 }
 
 .project-card {
-  background-color: var(--project-bg-color);
+  background-color: var(--project-card-bg-color);
 
   width: 45%;
   min-height: 450px;
